# samosbor-game

.github/workflows/: commit.yml  master.yml
archive/: README.md
archive/samosbor-client/www/: index.html  index.js  package-lock.json
archive/samosbor-core/: Cargo.toml  README.md
archive/samosbor-core/src/: lib.rs  location.rs  protocol.rs
archive/samosbor-server/: .history  Dockerfile  docker-image.sh
archive/samosbor-server/src/: main.rs
glavblock/: Cargo.toml  README.md
glavblock/src/: area.rs  core.rs  main.rs  people.rs  production.rs  render.rs  resources.rs  storage.rs  systems.rs  turn.rs
samosbor-client/: .gitignore  Cargo.toml  README.md
samosbor-client/src/: lib.rs
samosbor-client/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
samosbor-core/: Cargo.toml
samosbor-core/src/: lib.rs  location.rs  protocol.rs  render.rs  serialization.rs
samosbor-server/: Cargo.toml  README.md
samosbor-server/src/: main.rs
