[package]
name = "glavblock"
version = "0.1.0"
authors = [ "Artem Kanev <a-kanev@yandex.ru>"]
edition = "2018"
description = "Bastard of visual novel and econimical strategy in dark Samosbor setting."
license = "GNU GPL-3"

[dependencies]
# legion = { version = "0.3.1", default-features = false, features = ["wasm-bindgen"]}
legion = { version = "0.3.1" }
rand = { version = "0.8.2" }
macroquad = { version = "0.2.9" }


[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

