[package]
name = "samosbor-server"
version = "0.1.0"
authors = ["Artem Kanev <a-kanev@yandex.ru>"]
edition = "2018"

# [net]
# git-fetch-with-cli = true

[dependencies]
bincode = "1.3.1"
futures = "0.3.5"
samosbor-core = { git = "ssh://github.com/tempe-team/samosbor-core.git", rev = "a0aed6c08fa39869431a6c19616003e4924ee747"}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
legion = { version = "0.3.1" }
websocket = "0.26.2"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
clap = "2.33.3"
